# LMVideoStudio

./: .gitignore  LMVideoStudio.sln  Makefile  README.md  package-lock.json  package.json  paket.dependencies
.config/: dotnet-tools.json
config/: error-reporting.json.example  models.manifest.json  social-oauth.json.example  updater.latest.json.example
docs/: ERROR-REPORTING.md  MACOS-PORT.md  MICROSOFT-STORE.md  PHASE-0-SCOPE.md  SHIP-CHECKLIST.md  SOCIAL-OAUTH.md  SPIKE-RESULTS.md  job-events.schema.json  project.schema.json
python/: README.md  requirements-dev.txt  requirements-worker.txt
scripts/: _find_bad_paths.py  bootstrap_smoke.ps1  build-installer.ps1  build-macos.ps1  build-macos.sh  build-msix.ps1  build-prereqs.ps1  build-sidecars-macos.sh  build-sidecars.ps1  check_spike_deps.ps1  check_spike_deps.py  detect_gpu_conflicts.ps1  dev.ps1  e2e_smoke.ps1  generate-latest-json.ps1  gpu_e2e_smoke.ps1  run_worker_stub.rs  setup-ollama-macos.sh  setup-ollama.ps1  setup-python-macos.sh  setup-python.ps1  sync_models.ps1  test.ps1  verify-msi-wix1946.ps1  verify-sidecar-staging-macos.sh  verify-sidecar-staging.ps1
spike/: README.md  lmvs_worker.spec  requirements-spike.txt
src/LMVideoStudio.Tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json
src/LMVideoStudio.Tauri/src-tauri/capabilities/: default.json  microsoftstore.json
src/LMVideoStudio.Tauri/src-tauri/src/: error_report.rs  lib.rs  main.rs  sidecar.rs
src/LMVideoStudio.Tauri/src-tauri/windows/msi/: locale.wxl  main.wxs
tests/: README.md
(+152 files in other folders)
